--- a/src/daqb/exe/CMakeLists.txt
+++ b/src/daqb/exe/CMakeLists.txt
@@ -2,7 +2,7 @@ add_executable(comet_wsf_ctrl comet_wsf_ctrl.cc)
 target_link_libraries(comet_wsf_ctrl PRIVATE comet_wsf_daqb getopt linenoiseng)
 
 add_executable(comet_wsf_datadump comet_wsf_datadump.cc)
-target_link_libraries(comet_wsf_datadump PRIVATE getopt linenoiseng
+target_link_libraries(comet_wsf_datadump PRIVATE comet_wsf_daqb getopt linenoiseng
   Threads::Threads
   $<$<AND:$<CXX_COMPILER_ID:GNU>,$<AND:$<VERSION_LESS:$<CXX_COMPILER_VERSION>,9.0>,$<VERSION_GREATER:$<CXX_COMPILER_VERSION>,5.3>>>:stdc++fs>)
 
