--- a/src/daqb/lib/CMakeLists.txt
+++ b/src/daqb/lib/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(LIB_SRC comet_wsf_regctrl.cc)
+set(LIB_SRC comet_wsf_regctrl.cc comet_wsf_datarecv.cc)
 add_library(comet_wsf_daqb STATIC ${LIB_SRC})
 target_include_directories(comet_wsf_daqb
   PUBLIC
@@ -6,7 +6,7 @@ target_include_directories(comet_wsf_daqb
   $<INSTALL_INTERFACE:include>
   )
 
-set(LIB_PUBLIC_HEADERS comet_wsf_regctrl.hh comet_wsf_regdefine.hh comet_wsf_system.hh)
+set(LIB_PUBLIC_HEADERS comet_wsf_regctrl.hh comet_wsf_datarecv.hh comet_wsf_regdefine.hh comet_wsf_system.hh)
 set_target_properties(comet_wsf_daqb PROPERTIES PUBLIC_HEADER "${LIB_PUBLIC_HEADERS}")
 set_target_properties(comet_wsf_daqb PROPERTIES LINKER_LANGUAGE CXX)
 
